# data_science

./: applied_machine_learning_project.ipynb  house_price_eda_python.ipynb  pyproject.toml  wine_dataset_pipeline.ipynb
house_price_prediction_r/: house_prices_r.Rmd  house_prices_r_report.html
