[tool.poetry]
name = "data_science"
version = "0.1.0"
description = ""
authors = ["Somen <somenbg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
pandas = "^1.0"
matplotlib = "^3.2"
sklearn = "^0.0.0"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
